[gd_scene load_steps=12 format=3 uid="uid://dluk612hcy15t"]

[ext_resource type="Texture2D" uid="uid://ctlkaidjxf0tc" path="res://Game/1Scene/4Shop_Carpenter_Interior/Texture/Counter_Buyer.png" id="1_c7172"]
[ext_resource type="Script" path="res://Game/1Scene/4Shop_Carpenter_Interior/Script/counter_buyer.gd" id="1_pocqf"]
[ext_resource type="Texture2D" uid="uid://c2tujeh2rwt1r" path="res://Game/1Scene/4Shop_Carpenter_Interior/Texture/Counter_Buyer_Selected.png" id="2_6tox2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xsypg"]
atlas = ExtResource("1_c7172")
region = Rect2(0, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnad4"]
atlas = ExtResource("2_6tox2")
region = Rect2(0, 0, 64, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_yfh1a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsypg")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnad4")
}],
"loop": false,
"name": &"Selected",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ph5gr"]
size = Vector2(56, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lg8v2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_533m2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fa38"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfwk8"]
size = Vector2(106, 82)

[node name="Counter_Buyer" type="StaticBody2D"]
script = ExtResource("1_pocqf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(67.3913, 31)
scale = Vector2(1.04348, 1.04348)
sprite_frames = SubResource("SpriteFrames_yfh1a")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(68, 19)
shape = SubResource("RectangleShape2D_ph5gr")

[node name="Button" type="Button" parent="."]
offset_left = 39.0
offset_top = 17.0
offset_right = 97.0
offset_bottom = 54.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_lg8v2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_533m2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1fa38")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(84, 41)
shape = SubResource("RectangleShape2D_cfwk8")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
